--- a/src/template.html
+++ b/src/template.html
@@ -12,13 +12,12 @@
 
 <body>
   <div id='container'>
-
     <div class='count-wrapper'>
-      <h2 class='count-text'>СЧЁТ: </h2>
+      <h2 class='count-text'>СЧЁТ: 0</h2>
     </div>
     <canvas id='canvas'></canvas>
   </div>
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
 </body>
 
 </html>
