--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Viga" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-</head>
+<script defer src="main.bundle.js"></script></head>
 
 <body>
   <div id='container'>
