--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,9 @@
 <body>
   <div id='container'>
     <div class='count-wrapper'>
-      <h2 class='count-text'>СЧЁТ: 0</h2>
+      <h2 class='count-text'>СЧЁТ:
+        <span id="score">0</span>
+      </h2>
     </div>
     <canvas id='canvas'></canvas>
   </div>
